# cleancopy-python

./: .gitignore  README.clc  README.md  metadata.ttup.toml  pyproject.toml
.github/workflows/: on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
cleancopy/: cst_nodes.py  exceptions.py  grammar.lark  grammar_binding.py
data_testvecs/: sample_2.clc  sample_3.clc
sidecars_py/cleancopy_testutils/: pyproject.toml
sidecars_py/cleancopy_testutils/src_py/cleancopy_testutils/: __init__.py
src_py/cleancopy/: ast.py  spectypes.py
src_py/cleancopy/_cst/: abstractifier.py  treesitter_.py
tests/testdata/testvectors_clc/: sample_1.clc  sample_2.clc  sample_3.clc  sample_4.clc  sample_5.clc
tests_py/: cleancopy.e2e.test.py  cleancopy.integr8.test.py
