[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cleancopy"
version = "0.0.0"
description = "Python bindings for the cleancopy lightweight markup language"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
ipython = "^8.8.0"
ruff = "^0.0.221"
refurb = "^1.10.0"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/unittests",
]
addopts = "--import-mode=importlib"

[tool.ruff]
dummy-variable-rgx = "^__$"
line-length = 79
select = [
    "F",
    "E",
    "W",
    "C90",
    "B",
    "I",
    "N",
    "YTT",
    "S",
    "A",
    "C4",
    "ICN",
    "Q003",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF"
]

[tool.ruff.isort]
force-single-line = true

[tool.refurb]
ignore = []

[tool.coverage.run]
source = ["cleancopy/"]
